--- a/CoporateBooking/Views/RoundAATripsell/_FareDetailsPartialView.cshtml
+++ b/CoporateBooking/Views/RoundAATripsell/_FareDetailsPartialView.cshtml
@@ -207,7 +207,7 @@
                     {
                         <div class="text-14">Child ( @chdcount X &#8377;@perchdtamount)</div>
                     }
-                    if (inftbasefare != 0)
+                    if (inftbasefare != 0 && infcount>0)
                     {
                         <div class="text-14">Infant ( @infcount X &#8377;@inftbasefare) </div>
                     }
