--- a/OnionConsumeWebAPI/Views/RoundAATripsell/_FareDetailsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsell/_FareDetailsPartialView.cshtml
@@ -140,9 +140,9 @@
                     basefare = (peradtamount * adtcount) + (perchdtamount * chdcount) + (toatlinftbasefare);
 
                     basefaretax = @Model.passeengerlistRT[a].basefaretax;
-                    if (@Model.passeengerlistRT[a].journeys[0].Airlinename.ToLower()=="spicejet")
+                    if ((@Model.passeengerlistRT[a].journeys[0].Airlinename.ToLower() == "spicejet" || @Model.passeengerlistRT[a].journeys[0].Airlinename.ToLower() == "akasaair" || @Model.passeengerlistRT[a].journeys[0].Airlinename.ToLower() == "airasia") && (Model.passeengerlistItanary!=null &&  Model.passeengerlistItanary.infttax != null))
                     {
-                        totaltax = @Model.passeengerlistRT[a].basefaretax + @Model.passeengerlistItanary.infttax;
+                        totaltax = @Model.passeengerlistRT[a].basefaretax + @Model.passeengerlistItanary.infttax * infcount;
                     }
                     else
                     {
@@ -207,7 +207,7 @@
                     {
                         <div class="text-14">Child ( @chdcount X &#8377;@perchdtamount)</div>
                     }
-                    if (inftbasefare != 0)
+                    if (inftbasefare != 0 && infcount>0)
                     {
                         <div class="text-14">Infant ( @infcount X &#8377;@inftbasefare) </div>
                     }
