--- a/OnionConsumeWebAPI/Views/AkasaAirCommitBooking/AkasaAirBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/AkasaAirCommitBooking/AkasaAirBookingView.cshtml
@@ -616,6 +616,13 @@
                                                 <td>Rs.@Model.AirlinePNR[0].TotalAmountMeal</td>
                                             </tr>
                                         }
+                                        else
+                                        {
+                                            <tr>
+                                                <td>Addon Meal Amount:</td>
+                                                <td>Free</td>
+                                            </tr>
+                                        }
                                         if (@Model.AirlinePNR[0].TotaAmountBaggage > 0)
                                         {
                                             <tr>
@@ -624,11 +631,24 @@
                                             </tr>
 
                                         }
+                                        else  {
+                                            <tr>
+                                                <td>Addon Bagg Amount:</td>
+                                                <td>Free</td>
+                                            </tr>
+                                        }
                                         if (@Model.AirlinePNR[0].breakdown.passengerTotals.seats.totalSeatAmount > 0)
                                         {
                                             <tr>
                                                 <td>Seat Amount:</td>
                                                 <td>Rs. @Model.AirlinePNR[0].breakdown.passengerTotals.seats.totalSeatAmount</td>
+                                            </tr>
+                                        }
+                                        else
+                                        {
+                                            <tr>
+                                                <td>Seat Amount:</td>
+                                                <td>Free</td>
                                             </tr>
                                         }
                                     }
