--- a/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
@@ -663,8 +663,8 @@
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].identifier.carrierCode.Equals("6E"))
                                         {
-                                            <td>3500 RS. </td>
-                                            <td>3 days upto 2 hrs prior from departure</td>
+                                            <td>3999 (3 hrs before departure</td>
+                                            <td>2991 (3 hrs before departure</td>
                                             <td>As per Airline Fare rule</td>
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].identifier.carrierCode.Equals("QP"))
@@ -1388,8 +1388,8 @@
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].identifier.carrierCode.Equals("6E"))
                                         {
-                                            <td>3500 RS. </td>
-                                            <td>3 days upto 2 hrs prior from departure</td>
+                                            <td>3999 (3 hrs before departure)</td>
+                                            <td>2991 (3 hrs before departure</td>
                                             <td>As per Airline Fare rule</td>
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].identifier.carrierCode.Equals("QP"))
