--- a/OnionConsumeWebAPI/Views/RoundTrip/PostReturnAATripsellView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTrip/PostReturnAATripsellView.cshtml
@@ -663,13 +663,13 @@
 
 
                                                     ////******************************/
-                                                    if (@Faretype == "Flexi Plus")
+                                                    if (@Faretype == "Flexi Plus") 
                                                     {
                                                         <ul>
                                                             <li><img src="~/img/included.png" alt="icon">Cabin Bag 7 Kgs</li>
                                                             <li><img src="~/img/included.png" alt="icon">Check in 15 k.g  (1 piece)</li>
-                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Cancellation Rs 3500 :-  (3 days upto 2 hrs prior from departure)</li>
-                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Date Change Rs 3000 :- Before 3days upto 2 hrs from departure</li>
+                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Cancellation Rs 999 :-  (3 days upto 2 hrs prior from departure)</li>
+                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Date Change Rs 2999:- Before 3days upto 2 hrs from departure</li>
                                                             <li><img src="~/img/partial_inclusion.png" alt="icon">Seat :- Free seats</li>
                                                             <li><img src="~/img/partial_inclusion.png" alt="icon">Meal :- Free meal (per person)</li>
 
@@ -681,8 +681,8 @@
                                                         <ul>
                                                             <li><img src="~/img/included.png" alt="icon">Cabin Bag 7 Kgs</li>
                                                             <li><img src="~/img/included.png" alt="icon">Check in 15 k.g  (1 piece)</li>
-                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Cancellation Rs 3500 :-  (3 days upto 2 hrs prior from departure)</li>
-                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Date Change Rs 3000:- Before 3days upto 2 hrs from departure</li>
+                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Cancellation Rs 3999:- (3 hrs before departure</li>
+                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Date Change Rs 2991:- (3 hrs before departure</li>
                                                             <li><img src="~/img/partial_inclusion.png" alt="icon">Seat :- Chargeable</li>
                                                             <li><img src="~/img/partial_inclusion.png" alt="icon">Meal :- Chargeable</li>
 
@@ -694,8 +694,8 @@
                                                         <ul>
                                                             <li><img src="~/img/included.png" alt="icon">Cabin Bag 7 Kgs</li>
                                                             <li><img src="~/img/included.png" alt="icon">Check in 25 Kgs  (1 piece)</li>
-                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Cancellation Rs 500:- Before 3days upto 2 hrs from departure</li>
-                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Date Change Rs 500:- Before 3days upto 2 hrs from departure</li>
+                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Cancellation Rs 999 :-  (3 days upto 2 hrs prior from departure)</li>
+                                                            <li><img src="~/img/partial_inclusion.png" alt="icon">Date Change Rs 249:- Before 3days upto 2 hrs from departure</li>
                                                             <li><img src="~/img/partial_inclusion.png" alt="icon">Seat :- Free seats</li>
                                                             <li><img src="~/img/partial_inclusion.png" alt="icon">Meal :- Free meal (per person)</li>
 
@@ -1330,11 +1330,9 @@
 
                                                         </ul>
                                                     }
-                                                    
-                                                    
-                                                    
-                                                    
-                                                    
+
+
+
                                                     if (@Faretype == "Flexi Plus")
                                                     {
                                                         <ul>
@@ -1411,6 +1409,8 @@
 
                                                         </ul>
                                                     }
+                                                    
+                                                    
 
                                                     //AirIndia
 
