--- a/OnionConsumeWebAPI/Views/SGCommitBooking/booking.cshtml
+++ b/OnionConsumeWebAPI/Views/SGCommitBooking/booking.cshtml
@@ -565,6 +565,13 @@
                                                         <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.specialServices.total</td>
                                                     </tr>
                                                 }
+                                                else
+                                                {
+                                                    <tr>
+                                                        <td>Addon Meal Amount:</td>
+                                                        <td>Free</td>
+                                                    </tr>
+                                                }
 
                                                 if (@Model.AirlinePNR[a].breakdown.passengerTotals.baggage.total > 0)
                                                 {
@@ -574,12 +581,25 @@
                                                         <td>Rs.  @Model.AirlinePNR[a].breakdown.passengerTotals.baggage.total</td>
                                                     </tr>
                                                 }
-
+                                                else
+                                                {
+                                                    <tr>
+                                                        <td>Addon Bagg Amount:</td>
+                                                        <td>Free</td>
+                                                    </tr>
+                                                }
                                                 if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total > 0)
                                                 {
                                                     <tr>
                                                         <td>Seat Amount:</td>
                                                         <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.total</td>
+                                                    </tr>
+                                                }
+                                                else
+                                                {
+                                                    <tr>
+                                                        <td>Seat Amount:</td>
+                                                        <td>Free</td>
                                                     </tr>
                                                 }
                                             }
